--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
+    "@nuxtjs/supabase": "^1.4.0",
     "nuxt": "^3.13.0",
     "vue": "latest"
   }
