--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@nuxtjs/supabase": "^1.4.0",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "zod": "^3.22.2"
